[gd_scene load_steps=15 format=3 uid="uid://cbaajsmksk4lh"]

[ext_resource type="Script" uid="uid://deiih0eoqrj08" path="res://Scripts/PuyoPuyo/grid_manager.gd" id="1_uowjv"]
[ext_resource type="PackedScene" uid="uid://cqw1jv0baovrt" path="res://Scenes/PuyoPuyo/puyo.tscn" id="2_4xyke"]
[ext_resource type="PackedScene" uid="uid://bu3friywynij8" path="res://Scenes/animations and audio stuff/polyphonic_audio_player.tscn" id="3_6mbex"]
[ext_resource type="Script" uid="uid://80p7cue2s0ca" path="res://Scripts/audio/audio_library.gd" id="4_ahia6"]
[ext_resource type="Script" uid="uid://ccmkst5npwi3n" path="res://Scripts/audio/sound_effect.gd" id="5_onoqd"]
[ext_resource type="AudioStream" uid="uid://dtfg7tw4n02cc" path="res://Placeholder Art/Clink.1.wav" id="6_5hofm"]
[ext_resource type="AudioStream" uid="uid://dq2fpel8tfo2o" path="res://Placeholder Art/Thud.1.wav" id="7_tssi5"]
[ext_resource type="Texture2D" uid="uid://csoroeu2gqsl0" path="res://Art/puyo elements/puyo_grid.jpeg" id="8_ahia6"]

[sub_resource type="Animation" id="Animation_87frd"]
resource_name = "Queue_rotating"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FirstPair1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0523599, -0.0523599, 0.0523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FirstPair2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0523599, -0.0523599, 0.0523599]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SecondPair1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0523599, -0.0523599, 0.0523599]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SecondPair2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0523599, -0.0523599, 0.0523599]
}

[sub_resource type="Animation" id="Animation_8soxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FirstPair1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FirstPair2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SecondPair1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SecondPair2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4ny7"]
_data = {
&"Queue_rotating": SubResource("Animation_87frd"),
&"RESET": SubResource("Animation_8soxh")
}

[sub_resource type="Resource" id="Resource_7y48m"]
script = ExtResource("5_onoqd")
tag = "test_clink"
stream = ExtResource("6_5hofm")
metadata/_custom_type_script = "uid://ccmkst5npwi3n"

[sub_resource type="Resource" id="Resource_eai1b"]
script = ExtResource("5_onoqd")
tag = "test_thud"
stream = ExtResource("7_tssi5")
metadata/_custom_type_script = "uid://ccmkst5npwi3n"

[sub_resource type="Resource" id="Resource_7rsak"]
script = ExtResource("4_ahia6")
sound_effects = Array[ExtResource("5_onoqd")]([SubResource("Resource_7y48m"), SubResource("Resource_eai1b")])
metadata/_custom_type_script = "uid://80p7cue2s0ca"

[node name="GridManager" type="Node2D"]
script = ExtResource("1_uowjv")
down_tick_speed = 0.4

[node name="PlayerDownTimer" type="Timer" parent="."]

[node name="QueuedPuyos" type="Node2D" parent="."]

[node name="FirstPair1" parent="QueuedPuyos" instance=ExtResource("2_4xyke")]
position = Vector2(356, 13)
scale = Vector2(0.65, 0.65)

[node name="FirstPair2" parent="QueuedPuyos" instance=ExtResource("2_4xyke")]
position = Vector2(356, 53)
scale = Vector2(0.65, 0.65)

[node name="SecondPair1" parent="QueuedPuyos" instance=ExtResource("2_4xyke")]
position = Vector2(373, 99)
scale = Vector2(0.65, 0.65)

[node name="SecondPair2" parent="QueuedPuyos" instance=ExtResource("2_4xyke")]
position = Vector2(373, 141)
scale = Vector2(0.65, 0.65)

[node name="AnimationPlayer" type="AnimationPlayer" parent="QueuedPuyos"]
libraries = {
&"": SubResource("AnimationLibrary_n4ny7")
}

[node name="SFXPlayer" parent="." instance=ExtResource("3_6mbex")]
audio_library = SubResource("Resource_7rsak")

[node name="GridBackground" type="Sprite2D" parent="."]
texture = ExtResource("8_ahia6")
centered = false

[connection signal="timeout" from="PlayerDownTimer" to="." method="player_down_tick"]
